--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-bootstrap": "^2.4.0",
+    "react-dom": "18.2.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/node": "17.0.44",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
+    "@types/styled-components": "^5.1.25",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
+    "sass": "^1.52.3",
     "typescript": "4.7.3"
   }
 }
